clusters/dev/applications/mediastack/downloader-manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mediastack
  name: downloader-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediastack
  template:
    metadata:
      labels:
        app: mediastack
    spec:
      volumes:
        - name: qbit-config
          persistentVolumeClaim:
            claimName: qbit-pv-claim
        - name: downloads
          nfs:
            server: 192.168.20.20
            path: /mnt/nfs/data/downloads
      containers:
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:latest
        ports:
          - containerPort: 8080
            name: qbit-http
        volumeMounts:
          - mountPath: "/config"
            name: qbit-config
          - mountPath: "/downloads"
            name: downloads
      dnsPolicy: ClusterFirst
      restartPolicy: Always
