clusters/dev/applications/mediastack/indexer-manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mediastack
  name: indexer-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediastack
  template:
    metadata:
      labels:
        app: mediastack
    spec:
      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-pv-claim
        - name: wg-conf
          secret:
            secretName: wg-conf
        - name: downloads
          nfs:
            server: 192.168.20.20
            path: /mnt/nfs/data/downloads
      containers:
      - name: flaresolverr
        image: ghcr.io/flaresolverr/flaresolverr:latest
        ports:
          - containerPort: 8191
            name: flaresolv-http
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:latest
        ports:
          - containerPort: 9696
            name: prowlarr-http
        volumeMounts:
          - mountPath: "/config"
            name: prowlarr-config
          - mountPath: "/downloads"
            name: downloads
      dnsPolicy: ClusterFirst
      restartPolicy: Always
