clusters/dev/applications/mediastack/jellyfin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mediastack
  name: jellyfin-deployment
  namespace: mediastack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediastack
  template:
    metadata:
      labels:
        app: mediastack
    spec:
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-pv-claim
        - name: tv
          nfs:
            server: 192.168.0.250
            path: /mnt/data/tv
        - name: movies
          nfs:
            server: 192.168.0.250
            path: /mnt/data/movies
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin
        resources:
          limits:
            cpu: "4"
            memory: 6Gi
          requests:
            cpu: "1"
            memory: 1000Mi
        ports:
          - containerPort: 8096
            name: jellyfin-http
          - containerPort: 8920
            name: jellyfin-https
          - containerPort: 1900
            name: jellyfin-serv
            protocol: UDP
          - containerPort: 7359
            name: jellyfin-client
            protocol: UDP
        volumeMounts:
          - mountPath: "/config"
            name: jellyfin-config
          - mountPath: "/tv"
            name: tv
          - mountPath: "/movies"
            name: movies
      dnsPolicy: ClusterFirst
      restartPolicy: Always
