clusters/dev/applications/mediastack/manager.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mediastack
  name: manager-deployment
  namespace: mediastack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediastack
  template:
    metadata:
      labels:
        app: mediastack
    spec:
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-pv-claim
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-pv-claim
        - name: jellyseerr-config
          persistentVolumeClaim:
            claimName: jellyseerr-pv-claim
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-pv-claim
        - name: tv
          persistentVolumeClaim:
            claimName: tv-pv-claim
        - name: movies
          persistentVolumeClaim:
            claimName: movies-pv-claim
      containers:
      - name: sonarr
        resources:
          limits:
            cpu: "0.5"
            memory: 250Mi
          requests:
            cpu: 1m
            memory: 50Mi
        image: lscr.io/linuxserver/sonarr:latest
        ports:
          - containerPort: 8989
            name: sonarr-http
        volumeMounts:
          - mountPath: "/config"
            name: sonarr-config
          - mountPath: "/tv"
            name: tv
          - mountPath: "/downloads"
            name: downloads
      - name: radarr
        resources:
          limits:
            cpu: "0.5"
            memory: 250Mi
          requests:
            cpu: 1m
            memory: 50Mi
        image: lscr.io/linuxserver/radarr:latest
        ports:
          - containerPort: 7878
            name: radarr-http
        volumeMounts:
          - mountPath: "/config"
            name: radarr-config
          - mountPath: "/movies"
            name: movies
          - mountPath: "/downloads"
            name: downloads
      - name: jellyseerr
        resources:
          limits:
            cpu: "0.5"
            memory: 250Mi
          requests:
            cpu: 1m
            memory: 50Mi
        image: ghcr.io/fallenbagel/jellyseerr:latest
        ports:
          - containerPort: 5055
            name: jellyseerr-http
        volumeMounts:
          - mountPath: "/app/config"
            name: jellyseerr-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
