clusters/dev/applications/mediastack/manager-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: manager
  name: manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manager
  template:
    metadata:
      labels:
        app: manager
    spec:
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-pv-claim
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-pv-claim
        - name: tv
          nfs:
            server: 192.168.20.20
            path: /mnt/nfs/data/tv
        - name: movies
          nfs:
            server: 192.168.20.20
            path: /mnt/nfs/data/movies
        - name: downloads
          nfs:
            server: 192.168.20.20
            path: /mnt/nfs/data/downloads
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:latest
        ports:
          - containerPort: 8989
            name: sonarr-http
        volumeMounts:
          - mountPath: "/config"
            name: sonarr-config
          - mountPath: "/tv"
            name: tv
          - mountPath: "/downloads"
            name: downloads
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        ports:
          - containerPort: 7878
            name: radarr-http
        volumeMounts:
          - mountPath: "/config"
            name: radarr-config
          - mountPath: "/movies"
            name: movies
          - mountPath: "/downloads"
            name: downloads
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: manager
  labels:
    app: manager
spec:
  clusterIP: 10.43.245.91
  ports:
  - name: radarr-http
    port: 7878
    protocol: TCP
    targetPort: radarr-http 
  - name: sonarr-http
    port: 8989
    protocol: TCP
    targetPort: sonarr-http 
  selector:
    app: manager
  type: LoadBalancer
status:
  loadBalancer: {}
